# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

executable("vulkaninfo_bin") {
  output_name = "vulkaninfo"

  sources = [
    "vulkaninfo.c",
  ]

  deps = [
    "//third_party/vulkan_loader_and_validation_layers:vulkan",
  ]
}

package("vulkaninfo") {
  deprecated_system_image = true

  deps = [
    ":vulkaninfo_bin",
  ]

  binaries = [
    { name = "vulkaninfo" },
  ]
}
