# Copyright 2017 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("//build/toolchain/shared.gni")

fuchsia_shared_library("loader") {
  # The Vulkan loader is named libvulkan
  output_name = "vulkan"

  configs = [ "../:vulkan_build_config" ]

  include_dirs = [ "." ]

  cflags_c = [
    "-Wno-missing-field-initializers",
    "-DSYSCONFDIR=\"/system/data\"",
    "-DDATADIR=\"/usr/share\"",
  ]

  deps = [ "../:extra_vulkan_headers", "../:generate_extra_vulkan_headers" ]

  sources = [
    "cJSON.c",
    "debug_report.c",
    "dev_ext_trampoline.c",
    "extension_manual.c",
    "loader.c",
    "phys_dev_ext.c",
    "murmurhash.c",
    "trampoline.c",
    "wsi.c",
  ]
}
